remove public api key
